--- a/styles.css
+++ b/styles.css
@@ -50,21 +50,17 @@
     font-size: 13px;
     border-color: white;
 }
-
+/* erroring on modals */
 small {
     color: #e75c3c;
     margin-top: 5px;
     visibility: hidden;
   }
 
-  .form-control.error small {
+  .mb-2.error small {
     visibility: visible;
   }
   
-  .form-control.error input {
+  .mb-2.error input {
     border-color: #e75c3c;
-  }
-  
-  .form-control.success input {
-    border-color: #2ecc71;
   }
